--- a/templates/buscador.html
+++ b/templates/buscador.html
@@ -5,24 +5,29 @@
 </head>
 <body>
    <div class="container">
-  <div class="jumbotron">
-        <h1>Buscaticket</h1>
-        <p class="lead">Perque si els tickets estan, s'han de poder trobar</p>
-        <form>
-        <input type="text" name="q" value="">
-        <button class="btn btn-lg btn-success" type="submit">Buscar!</button>
-        <form>
+
+      <div class="header clearfix">        
+        <h1><span class="glyphicon glyphicon-search"></span> Buscaticket</h1>
       </div>
 
-      <div class="row marketing">
-        <div class="col-lg-6">
-<ul>
+  <div class="jumbotron">              
+        <form>
+			<div class="input-group input-group-lg">
+  				<input type="text" class="form-control" name="q" placeholder="Busca el que vulguis..." value="{{q}}">
+    			<span class="input-group-btn">
+        			<button class="btn btn-default" type="button">Busca tickets!</button>
+      			</span>  				
+  			</div>
+		</form>
+      </div>
+<h3>Resultats: {{resultat|count}}</h3>
 {% for resultat in resultats %}
-<li><a href="{{resultat.codiTiquet}}"/>{{resultat.assumpte}}</a></li>
+<h4>
+  <a href="https://gn6.upc.edu/tiquets/control/tiquetDetallDadesGenerals?requirementId={{resultat.codiTiquet}}"/>{{resultat.assumpte}}</h4>
+  {% if resultat.dataTancament %} <span class="label label-default">Tancat</span> {{resultat.dataTancament}} {% endif %}
+  {% if resultat.dataTancament %} <span class="label label-default">Obert</span> {{resultat.dataObertura}} {% endif %}
 {% endfor %}
 </ul>
-</div>
-</div>
 </div>
 </body>
 </html>
