--- a/templates/buscador.html
+++ b/templates/buscador.html
@@ -24,9 +24,9 @@
 {% for resultat in resultats %}
 <h4>
   <a href="https://gn6.upc.edu/tiquets/control/tiquetDetallDadesGenerals?requirementId={{resultat.codiTiquet}}"/>{{resultat.assumpte}}</h4>
-  {% if resultat.dataTancament!='None' %} <span class="label label-success">Tancat</span> {{resultat.dataTancament}} 
+  {% if resultat.dataTancament %} <span class="label label-success">Tancat</span> {{resultat.dataTancament}} 
   {% else %}
-  {% if resultat.dataCreacio is defined %} <span class="label label-danger">Obert</span> {{resultat.dataCreacio}} {% endif %}
+  {% if resultat.dataCreacio %} <span class="label label-danger">Obert</span> {{resultat.dataCreacio}} {% endif %}
   {% endif %}
   <br><br>
 {% endfor %}
