--- a/templates/buscador.html
+++ b/templates/buscador.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
+<!-- Load c3.css -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.10/c3.min.css" rel="stylesheet" type="text/css">
+
+<!-- Load d3.js and c3.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.9/d3.min.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.10/c3.min.js"></script>
 </head>
 <body>
    <div class="container">
@@ -19,6 +26,34 @@
       			</span>  				
   			</div>
 		</form>
+
+		<div id="chart"></div>
+		<script>
+		var chart = c3.generate({
+		    bindto: '#chart',
+		    data: {
+		      url:'/oberts-mensuals',
+		      mimeType: 'json',
+		      x:'mes',
+		      rows: [
+  				['mes','obrim','tanquem','oberts']
+              ],
+		      types: {
+        		obrim: 'bar',
+        		tanquem: 'bar',
+        		oberts: 'area'
+      		  }
+		    },
+		    axis: {
+        	  x: {
+            	type: 'timeseries',
+            	tick: {
+              	  format: '%Y-%m'
+            	}
+              }
+            }
+		});
+		</script>
       </div>
 <h3>Resultats: {{resultats|count}}</h3>
 {% for resultat in resultats %}
