--- a/templates/buscador.html
+++ b/templates/buscador.html
@@ -3,13 +3,6 @@
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 
-<!-- Load c3.css -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.10/c3.min.css" rel="stylesheet" type="text/css">
-
-<!-- Load d3.js and c3.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.9/d3.min.js" charset="utf-8"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.10/c3.min.js"></script>
-
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="http://code.highcharts.com/highcharts.js"></script>
 </head>
@@ -29,63 +22,46 @@
       			</span>  				
   			</div>
 		</form>
-
+    <br><br>
 		<div id="chart"></div>
 		<script>
-    var chart = c3.generate({
-        bindto: '#chart',
-        data: {
-          url:'/oberts-diaris',
-          mimeType: 'json',
-          x:'dia',
-          rows: [
-          ['dia','obrim','tanquem','oberts']
-              ],
-          types: {
-            obrim: 'bar',
-            tanquem: 'bar',
-            oberts: 'area'
-            }
-        },
-        bar : {
-          width: 4
-        },
-        axis: {
-            x: {
-              type: 'timeseries',
-              min: '2015-9-1',
-              tick: {
-                  format: '%Y-%m-%d'
-              }
-              }
-            }
-    });    
-    /*
-		var chart = c3.generate({
-		    bindto: '#chart',
-		    data: {
-		      url:'/oberts-diaris',
-		      mimeType: 'json',
-		      x:'mes',
-		      rows: [
-  				['mes','obrim','tanquem','oberts']
-              ],
-		      types: {
-        		obrim: 'bar',
-        		tanquem: 'bar',
-        		oberts: 'area'
-      		  }
-		    },
-		    axis: {
-        	  x: {
-            	type: 'timeseries',
-            	tick: {
-              	  format: '%Y-%m'
-            	}
-              }
-            }
-		});
-*/
+    $(function () {
+      $.getJSON('/oberts-diaris', function (data) {
+          $('#chart').highcharts({
+              chart: {
+                  zoomType: 'x'
+              },
+              title: {
+                  text: 'Tickets oberts i tancats'
+              },
+              xAxis: {
+                  categories: data['dia']
+              },
+              yAxis: {
+                  max:150,
+                  title: {
+                    text: 'Numero de tickets'
+                  }
+              },              
+              legend: {
+                  enabled: false
+              },
+              series: [{
+                  type: 'area',
+                  name: 'Oberts en total',
+                  data: data['oberts']
+              },{
+                  type: 'column',
+                  name: 'Obrim',
+                  data: data['obrim']
+              },{
+                  type: 'column',
+                  name: 'Tanquem',
+                  data: data['tanquem']
+              }]
+          });
+      });
+    });
 		</script>
       </div>
 <h3>Resultats: {{resultats|count}}</h3>
