El botó no era de submit

--- a/templates/buscador.html
+++ b/templates/buscador.html
@@ -15,7 +15,7 @@
 			<div class="input-group input-group-lg">
   				<input type="text" class="form-control" name="q" placeholder="Busca el que vulguis..." value="{{q}}">
     			<span class="input-group-btn">
-        			<button class="btn btn-default" type="button">Busca tickets!</button>
+        			<button class="btn btn-default" type="submit">Busca tickets!</button>
       			</span>  				
   			</div>
 		</form>
